Moving original Expr codes. Solving problems with displaying - correct buffer manipulation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         </script>
     </head>
     <body>
-        <canvas id="buf" />
+        <canvas id="buf" width="640" height="480" style="border:1px solid #000000;"></canvas>
         <script>
             var main=new ExprAE.Main();
             main.main();
