Moving original Expr codes. Displaying console.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         </script>
     </head>
     <body>
-        <canvas id="buf" width="640" height="480"></canvas>
+        <canvas id="buf" width="640" height="480">
+            Canvas not supported
+        </canvas>
         <script>
             var main=new ExprAE.Main();
             main.main();
